[package]
name = "polyio"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/polyio"
repository = "https://github.com/d-e-s-o/polyio.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["trading", "finance", "async", "stocks"]
description = """
A create for interacting with the Polygon API at polygon.io.
"""

[dependencies]
futures = {version = "0.3", default-features = false}
http-endpoint = "0.1"
hyper = {version = "0.13", default-features = false}
hyper-tls = {version = "0.4", default-features = false}
log = "0.4"
num-decimal = {version = "0.1", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tungstenite = {package = "async-tungstenite", version = "0.3", default-features = false, features = ["tokio-runtime", "tokio-tls"]}
url = "2.0"
websocket-util = "0.2"

[dev-dependencies]
env_logger = {version = "0.7", default-features = false}
test-env-log = "0.2"
tokio = {version = "0.2", default-features = false, features = ["rt-core", "macros"]}
websocket-util = {version = "0.2", features = ["test"]}
