[package]
name = "polyio"
version = "0.5.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/polyio"
repository = "https://github.com/d-e-s-o/polyio.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["trading", "finance", "async", "stocks"]
description = """
A create for interacting with the Polygon API at polygon.io.
"""

[dependencies]
chrono = {version = "0.4", default-features = false}
futures = {version = "0.3", default-features = false}
http = {version = "0.2", default-features = false}
http-endpoint = "0.2"
hyper = {version = "0.13", default-features = false}
hyper-tls = {version = "0.4", default-features = false}
num-decimal = {version = "0.2", features = ["serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
time-util = {version = "0.2", features = ["chrono", "serde"]}
tracing = {version = "0.1", default-features = false, features = ["attributes", "std"]}
tracing-futures = {version = "0.2", default-features = false, features = ["std-future"]}
tungstenite = {package = "async-tungstenite", version = "0.5", default-features = false, features = ["tokio-runtime", "tokio-tls"]}
url = "2.0"
websocket-util = "0.5"

[dev-dependencies]
maplit = {version = "1.0", default-features = false}
test-env-log = {version = "0.2.2", default-features = false, features = ["trace"]}
tokio = {version = "0.2", default-features = false, features = ["rt-core", "macros"]}
tracing-subscriber = {version = "0.2", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"]}
websocket-util = {version = "0.5", features = ["test"]}
