[package]
name = "polyio"
version = "0.11.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/polyio"
repository = "https://github.com/d-e-s-o/polyio.git"
readme = "README.md"
categories = [
  "api-bindings",
  "asynchronous",
  "network-programming",
  "web-programming::http-client",
  "web-programming::websocket"
]
keywords = ["trading", "finance", "async", "stocks"]
description = """
A create for interacting with the Polygon API at polygon.io.
"""
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
chrono = {version = "0.4", default-features = false}
futures = {version = "0.3", default-features = false}
http = {version = "0.2", default-features = false}
http-endpoint = "0.4"
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
time-util = {version = "0.3", features = ["chrono", "chrono-tz", "serde"]}
tracing = {version = "0.1", default-features = false, features = ["attributes", "std"]}
tracing-futures = {version = "0.2", default-features = false, features = ["std-future"]}
url = "2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = {version = "0.14", default-features = false, features = ["client", "http1"]}
hyper-tls = {version = "0.5", default-features = false}
tungstenite = {package = "tokio-tungstenite", version = "0.14", features = ["connect", "native-tls"]}
websocket-util = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = {version = "0.3", default-features = false}
wasm-bindgen = {version = "0.2", default-features = false, features = ["std", "serde-serialize"]}
wasm-bindgen-futures = {version = "0.4", default-features = false}

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
default-features = false
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[dev-dependencies]
maplit = {version = "1.0", default-features = false}

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
test-log = {version = "0.2.8", default-features = false, features = ["trace"]}
tokio = {version = "1.0", default-features = false, features = ["rt", "macros"]}
tracing-subscriber = {version = "0.2", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"]}
websocket-util = {version = "0.8", features = ["test"]}
